--- a/assingnments/assignment 3.html/index.html
+++ b/assingnments/assignment 3.html/index.html
@@ -21,7 +21,27 @@
 <a href="#">  Lawn <span>Care</span></a>
 <div class="search">
 <input type="search" placeholder="search">
+
 <li> <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+</div>
+</header>
+<nav>
+<li><a href="#">Home</a></li>
+<li><a href="#">About Us</a></li>
+<li><a href="#">Services</a></li>
+<li><a href="#">Gallery</a></li>
+<li><a href="#">Blog</a></li>
+<li><a href="#">Contact</a></li>
+
+
+</nav>
+
+<div class="hero"> 
+
+<h2 style="          color: forestgreen;"> Welcome to Lawn Care </h2>
+<h1 style="      color: forestgreen;" > Lawn  Care for everyone</h1>
+<p style="        color: forestgreen;"   > let us work on your yard</p>
+<button> Learn more<i class="fa-solid fa-greater-than"></i>   </button>   
 </div>
 
 
@@ -48,8 +68,7 @@
 
 
 
-
- </header>
+ 
     
 
 
